# FLP-arithmethic_parser

./: .gitignore  README.md
agent-log/: Part2.md  agent.md  cabal.md  log.md
solution/: .gitignore  Evaluator.hi  Evaluator.hs  Evaluator_OLD.hs  Main.hi  Main.hs  Parser.hi  Parser.hs  Tests.hs  Tests.hs.OLD  Tokenizer.hi  Tokenizer.hs  evaluator  evaluator.cabal
solution/docs/: ASSIGNMENT_GUIDE.md  BugFixesDetailed.md  FeatureExtensionDetailed.md  PROJECT_OVERVIEW.md  REFACTORING_SUMMARY.md
task/: Assignment 1.md  Evaluator.hs
